reducing javascript loaded

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
@@ -19,13 +16,22 @@
     <meta name="twitter:title" content="Sing American folk hymns in Durham">
     <meta name="twitter:description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month">
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/dsh_new_share_image_twitter.png">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <meta name="google-site-verification" content="_wn5kDD-KQIqThtDEBTZNvmbzzF3UoENjI3VURcHtqs" />
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="css/main.css">
     <script src="js/matomo.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script> -->
+    <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
         crossorigin="anonymous"></script>
+    <script src="js/main.js" type="module"></script>
 </head>
 
 <body>
@@ -75,12 +81,14 @@
                     <h4 class="text-center pb-4">
                         <strong>Come along to sing Sacred Harp in Durham!</strong>
                     </h4>
-                    <p><a href="#more-information">Sacred Harp</a> is a <strong>community folk hymn singing</strong> tradition from the United States. The Sacred Harp is also the name of the book we sing from.
+                    <p><a href="#more-information">Sacred Harp</a> is a <strong>community folk hymn singing</strong>
+                        tradition from the United States. The Sacred Harp is also the name of the book we sing from.
                     </p>
                     <p>
                         <strong>Our singings are open to all.</strong> We aren't a choir as
                         we don't rehearse or perform and no-one's in charge. Everyone just sings for their own
-                        enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come along.</strong> Singers of all religions and none are welcome.</p>
+                        enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come
+                            along.</strong> Singers of all religions and none are welcome.</p>
                     <!--   <div class="notification px-3 px-md-5" id="notification">
                 Special announcements go here
                      <p>Unfortunately the singings on <strong>13th</strong> and <strong>27th October</strong> are off. We'll be singing again on <strong>27th November</strong></p>
@@ -89,7 +97,8 @@
 
                     <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
                         <p>
-                            <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span>
+                            <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm -
+                                4pm</span>
                             at
                             <a href="#venue" class="font-italic font-weight-bold" id="map-link">Antioch House, 66
                                 Crossgate, Durham, DH1 4PR</a>.
@@ -100,9 +109,11 @@
 
                     </div>
 
-                    <p>We have loaner books for you to sing from. If you want your own copy you can buy a book for £25 cash.</p>
+                    <p>We have loaner books for you to sing from. If you want your own copy you can buy a book for £25
+                        cash.</p>
 
-                    <p>Feel free to bring along children. You'll be responsible for your own children but there are toys to play with and baby changing facilities.</p>
+                    <p>Feel free to bring along children. You'll be responsible for your own children but there are toys
+                        to play with and baby changing facilities.</p>
                 </div>
             </div>
 
@@ -112,13 +123,18 @@
                     <h2 class="text-center pb-2">
                         <u>Venue</u>
                     </h2>
-                    <p class="text-center font-weight-bold"><a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch House, 66 Crossgate, Durham, DH1 4PR</a></p>
+                    <p class="text-center font-weight-bold"><a
+                            href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch
+                            House, 66 Crossgate, Durham, DH1 4PR</a></p>
                     <p>
-                        <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch
+                        <a
+                            href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch
                             House</a> is the parish centre of St Margaret's Church which is over the road. It's
-                        <a href="https://www.google.com/maps/dir/Durham+Train+Station,+Station+Approach,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7778203,-1.5829481,17z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df4b3ef5e51:0xa17d2107d3aabd3c!2m2!1d-1.5817251!2d54.7793784!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e3?hl=en-GB">less
+                        <a
+                            href="https://www.google.com/maps/dir/Durham+Train+Station,+Station+Approach,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7778203,-1.5829481,17z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df4b3ef5e51:0xa17d2107d3aabd3c!2m2!1d-1.5817251!2d54.7793784!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e3?hl=en-GB">less
                             than 10 minutes on foot from the train station</a> and
-                        <a href="https://www.google.com/maps/dir/Bus+Station,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7767393,-1.5816614,18z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df526427d15:0x47e764fbc246810d!2m2!1d-1.5821659!2d54.777366!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e2?hl=en-GB">less
+                        <a
+                            href="https://www.google.com/maps/dir/Bus+Station,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7767393,-1.5816614,18z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df526427d15:0x47e764fbc246810d!2m2!1d-1.5821659!2d54.777366!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e2?hl=en-GB">less
                             than 5 minutes from the bus station</a>. There is paid-for parking right outside the front
                         door
                         of the singing.</p>
@@ -126,7 +142,8 @@
                     <p class="text-center mb-0">
                         <small>Click on the map below for Google Maps</small>
                     </p>
-                    <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">
+                    <a
+                        href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">
                         <img src="images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
                     </a>
                     <p class="text-right">
@@ -150,7 +167,8 @@
                         </div>
                         <div class="col-9 col-sm-10">
                             <p>Email us at
-                                <a class="wordwrap" href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
+                                <a class="wordwrap"
+                                    href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
                             </p>
                         </div>
                     </div>
@@ -168,14 +186,13 @@
                     </div>
 
                     <div class="pt-3 pb-3 mt-4 mb-4 text-center border" id="get-updates">
-
                         <h5>Get updates about our singings</h5>
                         <form action="https://tinyletter.com/durhamsacredharp" method="post" target="popupwindow"
                             onsubmit="window.open('https://tinyletter.com/durhamsacredharp', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"
                             class="form-inline">
                             <div class="form-group mx-auto">
-                                <input type="email" class="form-control text-center mt-2 mb-2" placeholder="email@example.com"
-                                    name="email" id="tlemail" />
+                                <input type="email" class="form-control text-center mt-2 mb-2"
+                                    placeholder="email@example.com" name="email" id="tlemail" />
                                 <input type="hidden" value="1" name="embed" />
 
                                 <button class="btn ml-4 updates-subscribe-button" type="submit">Subscribe</button>
@@ -183,7 +200,8 @@
 
                             <small class="form-text px-2 px-md-5">We use TinyLetter to send occasional email updates.
                                 You'll receive
-                                an email from them to confirm you want to subscribe. This is <a href="https://mailchimp.com/legal/privacy/">their
+                                an email from them to confirm you want to subscribe. This is <a
+                                    href="https://mailchimp.com/legal/privacy/">their
                                     privacy policy</a>.</small>
                         </form>
                     </div>
@@ -221,9 +239,7 @@
         </main>
     </div>
 
-    <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
-        crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+
 
 </body>
 
