--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                         <a href="https://www.youtube.com/watch?v=YHUfHNEZDPc">Awake My Soul</a> is a great documentary
                         about Sacred Harp singing.</p>
                     <p>
-                        <a href="https://web.archive.org/web/20170530194352/http://www.newcastleshapenote.co.uk/">Newcastle
-                            Shapenote</a> sings Sacred Harp and other shapenote music
+                        <a href="https://newcastlesacredharp.co.uk">Newcastle
+                            Sacred Harp</a> sings Sacred Harp and other shapenote music
                         <span class="font-italic">every Tuesday from 7.30pm at the Bridge Hotel</span> and
                         <span class="font-italic">every 2nd Sunday from 8pm in Gateshead</span>.</p>
                 </div>
