--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         we don't rehearse or perform and no-one's in charge. Everyone just sings for their own
                         enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come
                             along.</strong> Singers of all religions and none are welcome.</p>
-                    <!--   <div class="notification px-3 px-md-5" id="notification">
+                 <div class="notification px-3 px-md-5" id="notification">
                 Special announcements go here
-                     <p>Unfortunately the singings on <strong>13th</strong> and <strong>27th October</strong> are off. We'll be singing again on <strong>27th November</strong></p>
-                </div> -->
+                     <p>Unfortunately the singing on <strong>11th May</strong> is off. We'll be singing again on <strong>25th May</strong>.</p>
+                </div> 
 
 
                     <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
