--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come
                             along.</strong> Singers of all religions and none are welcome.</p>
                  <div class="notification px-3 px-md-5" id="notification">
-                Special announcements go here
+                    <!-- Special announcements go here -->
                      <p>Unfortunately the singing on <strong>11th May</strong> is off. We'll be singing again on <strong>25th May</strong>.</p>
                 </div> 
 
